# testTaskRedSoft

./: .gitignore  README.md  copyToClipboardNoXclip.c
testTaskRedSoft/: CMakeLists.txt  app.cpp  app.h  main.cpp
